# NextAudio

./: CMakeLists.txt  README.md
include/: audio.hpp
lib/opus_decoder/: CMakeLists.txt  COpusCodec.cpp  COpusCodec.hpp
lib/stb_vorbis/: CMakeLists.txt  stb_vorbis.hpp
src/: audio.cpp  config.hpp  debug.hpp
src/backends/: openal.cpp
tests/: pause.cpp  play.cpp
